@@ -9,18 +9,4 @@ Username=user
 Password=
 
 [Audio]
-DeviceType=ALSA
 DeviceName=hw:0
-Format=MP2
-SampleRate=48000
-BitRate=192000
-Channels=2
-
-[MySQL]
-Hostname=localhost
-Dbname=Rivendell
-Username=rduser
-Password=letmein
-
-[WebServer]
-Port=80
