@@ -1,51 +1,0 @@
-// streamplayer_glass.h
-//
-// Stream player glass for GlassPlayer
-//
-//   (C) Copyright 2015-2016 Fred Gleason <fredg@paravelsystems.com>
-//
-//   This program is free software; you can redistribute it and/or modify
-//   it under the terms of the GNU General Public License version 2 as
-//   published by the Free Software Foundation.
-//
-//   This program is distributed in the hope that it will be useful,
-//   but WITHOUT ANY WARRANTY; without even the implied warranty of
-//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-//   GNU General Public License for more details.
-//
-//   You should have received a copy of the GNU General Public
-//   License along with this program; if not, write to the Free Software
-//   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-//
-
-#ifndef STREAMPLAYER_GLASS_H
-#define STREAMPLAYER_GLASS_H
-
-#include <QProcess>
-#include <QTimer>
-
-#include "streamplayer.h"
-
-class StreamPlayerGlass : public StreamPlayer
-{
- Q_OBJECT;
- public:
-  StreamPlayerGlass(Config *c,QObject *parent=0);
-  ~StreamPlayerGlass();
-
- protected:
-  void startDevice(const QString &url,int start_pos,int end_pos);
-  void stopDevice();
-
- private slots:
-  void processStateChangedData(QProcess::ProcessState state);
-  void processReadyReadData();
-  void processFinishedData(int exit_code,QProcess::ExitStatus status);
-  void processErrorData(QProcess::ProcessError err);
-
- private:
-  QProcess *stream_process;
-};
-
-
-#endif  // STREAMPLAYER_GLASS_H
